--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
 </div>
 
 <div class="communicate">
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <h3>Let's help you navigate your next</h3>
     <a href="#contact"><button class="btn">Contact Now</button></a>
 </div>
 
@@ -229,6 +228,30 @@
                     <h3>Terraform</h3>
                     <p>
                         Automation
+
+                    </p>
+                </div>
+            </div>
+            <div class="testimonial-item row align-items-center">
+                <div class="testimonial-img">
+                    <img src="./images/python.jpg" alt="Testimonial image">
+                </div>
+                <div class="testimonial-text">
+                    <h3>Python</h3>
+                    <p>
+                        Backend
+
+                    </p>
+                </div>
+            </div>
+            <div class="testimonial-item row align-items-center">
+                <div class="testimonial-img">
+                    <img src="./images/react.jpg" alt="Testimonial image">
+                </div>
+                <div class="testimonial-text">
+                    <h3>React</h3>
+                    <p>
+                        Frontend
 
                     </p>
                 </div>
