fixing toggle and roles

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           </div>
           <div class="info">
               <h3>Chandra Shekar V</h3>
-              <span>Founder</span>
+              <span>Senior Kubernetes Engineer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                   <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -310,7 +310,7 @@
           </div>
           <div class="info">
               <h3>Mohammed Riyaz</h3>
-              <span>Founder</span>
+              <span>Senior DevOps Engineer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                   <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -327,7 +327,7 @@
           </div>
           <div class="info">
               <h3>Ajay Bheemaraju</h3>
-              <span>Founder</span>
+              <span>Senior Developer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                   <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -343,8 +343,8 @@
               <img src="./images/pexels-andrea-piacquadio-74513.jpg" alt="Team member 1">
           </div>
           <div class="info">
-              <h3>Bharath Saina</h3>
-              <span>Founder</span>
+              <h3>Padmaraju Pinnam</h3>
+              <span>Senior Developer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                   <a href="https://twitter.com/login" class="fab fa-twitter"></a>
