--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="section-header" style="text-align: center;">
             <h2 style="margin-top: -15rem;">Our Expertise</h2>
             <p style="font-size: 2rem;">
-                See what people have to say about us
+                Leading the Way in Cutting-Edge Cloud and Development Solutions.
             </p>
         </div>
 
@@ -256,9 +256,9 @@
 <div class="clients mt-100">
     <div class="container">
         <div class="section-header">
-            <h2>Our Clients</h2>
+            <h2>Our Commitment</h2>
             <p>
-                We don't just build softwares, we build your business.
+                We don't Simply Develop Technology; We Architect your SUCCESS. 
             </p>
         </div>
         <div class="owl-carousel clients-carousel">
@@ -293,7 +293,7 @@
           </div>
           <div class="info">
               <h3>Chandra Shekar V</h3>
-              <span>Senior Kubernetes Engineer</span>
+              <span>Senior k8's Engineer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                   <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -361,7 +361,7 @@
 </section>
 <div class="contact-in">
     <div class="contact-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30711243.17762776!2d64.4398422293091!3d20.011408266548177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1644684739958!5m2!1sen!2sin" width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.2226744238196!2d78.33374964561445!3d17.40109824104456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb9528d7ce6395%3A0xcd38f85d7d68b818!2sOne%20Golden%20Mile!5e0!3m2!1sen!2sin!4v1706026336656!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="contact-form">
         <form action="./contactme.php" method="POST">
