--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="section-head-1 col-sm-12" style="text-align: center;">
           <h4 style="margin-top: -5rem;" id="portfolio"><span>Our</span> Projects</h4>
           
-          <p>The objective of IT Company is to enable a large number of youth to take up <br>industry-relevant skill training that will help them<br> in securing a better livelihood.
+          <p>Advanced Infrastructure Mastery: Pioneering Kubernetes Deployments, Agile Architectures, and Robust Disaster-Resilient Systems for Peak CI/CD and Monitoring Excellence.
             </p>
         </div>
         
@@ -141,9 +141,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-camera"></i></span>
+          <div class="item"> <span class="icon feature_box_col_six"><i class="fas fa-sync-alt"></i></span>
             <h6>Project-3</h6>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.<br><br><br></p>
+            <p>Engineered a resilient, EKS-based infrastructure with disaster recovery and auto-failover capabilities, Artifactory integration using HashiCorp Vault, Terraform, Ansible, and a robust Splunk, ELK, Prometheus, Grafana, and Nagios monitoring suite linked to ServiceNow and Slack for efficient incident management.<br><br><br></p>
           </div>
         </div>
       </div>
@@ -258,7 +258,7 @@
         <div class="section-header">
             <h2>Our Commitment</h2>
             <p>
-                We don't Simply Develop Technology; We Architect your SUCCESS. 
+                We don't Simply Develop Technology; We Architect your <b> SUCCESS. </b> 
             </p>
         </div>
         <div class="owl-carousel clients-carousel">
@@ -292,7 +292,7 @@
               <img src="./images/pexels-andrea-piacquadio-84543.jpg" alt="Team member 1">
           </div>
           <div class="info">
-              <h3>Chandra Shekar V</h3>
+              <h3>Chandra Shekar</h3>
               <span>Senior k8's Engineer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
@@ -309,7 +309,7 @@
               <img src="./images/pexels-vinicius-wiesehofer-113062.jpg" alt="Team member 1">
           </div>
           <div class="info">
-              <h3>Mohammed Riyaz</h3>
+              <h3>Riyaz</h3>
               <span>Senior DevOps Engineer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
@@ -326,7 +326,7 @@
               <img src="./images/pexels-hussein-altameemi-27763.jpg" alt="Team member 1">
           </div>
           <div class="info">
-              <h3>Ajay Bheemaraju</h3>
+              <h3>Ajay</h3>
               <span>Senior Developer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
@@ -343,7 +343,7 @@
               <img src="./images/pexels-andrea-piacquadio-74513.jpg" alt="Team member 1">
           </div>
           <div class="info">
-              <h3>Padmaraju Pinnam</h3>
+              <h3>Padmaraju</h3>
               <span>Senior Developer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
